--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <img src="Imagenes/Imagen Actividad 4.png" alt="" class="ImagenesActividades">
                         <div class="capa">
                             <h1 class="TitulodeActividades">
-                                Carrosas y Comparsas</h1>
+                                Carrozas y Comparsas</h1>
                             <p class="textosActividades"> Las festividades incluyen desfiles con carrozas que representan la vida campesina y comparsas con danzas folclóricas, destacando la diversidad cultural del municipio.
 
                             </p>
